--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
-title: adi7312 - Cybersecurity portfolio
-
+title: Cybersecurity portfolio - adi7312
 author: 
   name: adi7312
   email: zdrian.alewski@gmail.com
