--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: Cybersecurity portfolio - adi7312
 
 
-description: >
-  Repository contains solutions to CTF tasks, cybersecurity projects and much more cyber staff!
+description:
+  <script src="https://tryhackme.com/badge/1373347"></script>
 
 
 markdown: kramdown
