--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Cybersecurity portfolio - adi7312
 
 
 description:
-  <script src="https://tryhackme.com/badge/1373347"></script>
+  Some cyber stuff.
 
 
 markdown: kramdown
